# py-process_phrase_files

./: .gitignore  AGENTS.md  Magic_Box_Phrase_File_Formatter.ipynb  Phrase_File_Formatter_(Magic_Box).ipynb  Phrase_File_Formatter_(release_version).ipynb  README.md  color_cells.py  combine_for_notebook.py  combined_script.py  config.json  config_loader.py  convert.py  df_to_word.py  excel.py  excel_direct.py  excel_save_as.py  flowchart.py  format_helper.py  format_tables.py  help_format_tables.py  main.py  merge_cells.py  merge_df.py  notebook_mirror.py  notebook_script.py  phrase_files_formatter.ipynb  pre-process_excel.py  process_excel.py  process_excel_new.py  process_mxliff.py  process_tmx.py  process_word.py  pyproject.toml  save_formatting.py  table_to_df.py  word_tables.py
archive/: process_excel.py
colab/: Phrase_File_Formatter_(Magic_Box).ipynb  a_header_cell.md  b_connect_gdrive.py  b_upload_to_colab.py  c_notebook_script.py  connect_gdrive.py  notebook_script.py
data/: comparison_Merged.csv  comparison_Word.csv  comparison_mxliff.csv
data/input_files/: 250314_LION様_P36_Positive Habits創出への取組み-ja-en-D.docx  250314_LION様_P36_Positive Habits創出への取組み-ja-en-D.mxliff
data/output_files/: 250314_LION様_P36_Positive Habits創出への取組み-ja-en-D_merged.docx
scripts/: combine_for_notebook.py  download_colab_files.py  main.py
src/: config_loader.py  df_to_word.py  format_helper.py  merge_df.py  pipeline.py  process_mxliff.py  process_word.py  save_formatting.py  table_to_df.py
tests/: test_main.py  test_mxliff_parsing.py  test_pipeline.py
