[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "phrase-files-formatter"
version = "0.1.0"
description = "Merge paired DOCX and MXLIFF files into formatted Word documents."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "python-docx",
]

[tool.setuptools]
packages = ["src"]
